Avoid dropdowns too wide, mostly on tablets

--- a/nycommons/static/css/lot_detail.less
+++ b/nycommons/static/css/lot_detail.less
@@ -93,6 +93,7 @@
             border: none;
             box-shadow: none;
             margin: 0;
+            min-width: inherit;
 
             & > li > a {
                 background: @white;
@@ -190,7 +191,6 @@
             height: 395px;
         }
     }
-
 }
 
 .nearby-lots-list {
